@@ -2509,9 +2509,11 @@ mb.azmustclose.text=Azureus must quit due to a problem (re)starting azureus that
 	After Azureus closes, please re-open manually.
 
 network.ipv6.prefer.addresses=Prefer IPv6 addresses when both IPv6 and IPv4 are available
+network.ltep.enabled=Enable experimental extension protocol handshake support (restart required)
+network.enforce.ipbinding=Enforce IP bindings even when interfaces are not available, prevents any connections if none of the specified interfaces are available
+
 DHTView.title.full_v6=Distributed Database IPv6
 
-network.ltep.enabled=Enable experimental extension protocol handshake support (restart required)
 
 ConfigView.pluginlist.loadSelected=Load Selected
 
