@@ -5,6 +5,7 @@ AZUREUS VUZE CHANGELOG
 
 FEATURE: Core | Added µTorrent PEX support [amc1]
 FEATURE: Core | Azureus probes trackers for UDP-capabilities on first scrape/announce now and uses udp instead of http where available [The 8472]
+FEATURE: Core | Added option to enforce IP bindings even when the specified interfaces are not available (useful when Azureus should not use certain network interfaces) [The 8472] 
 FEATURE: UI   | Added option for "Open Containing Folder" menu action - which may integrate better with non-standard file browsers [amc1]
 FEATURE: UI   | Added option for "Show Torrent Menu" -- Users can now decide to see the Torrent menu in the menubar or not [knguyen]
 FEATURE: UIv3 | New menu configuration for Vuze and Vuze Advanced UI's [knguyen]
